--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@ body{
 #header{
     text-align:center;
     margin:40px 0;
+    background-color: #222;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin: auto;
+    color:#eee
+
 }
 
 #layout{
@@ -28,7 +34,7 @@ body{
 /* Sidebar */
 #sidebar{
     width:20%;
-    height:100vh;
+        height: 84vh;
     background:#222;
     color:white;
     padding:20px;
@@ -44,7 +50,7 @@ body{
 
 /* Main content */
 #root{
-    width:80%;
+    width: 100%;
     display:flex;
     justify-content:space-around;
     padding:20px;
@@ -58,6 +64,11 @@ body{
     background:#eee;
     text-align:center;
     padding:10px;
+}
+.card img{
+    margin-top:10px;
+    height:200px;
+    width: 290px;
 }
 
 .media{
@@ -76,7 +87,13 @@ button{
 #footer{
     text-align:center;
     margin:40px 0;
+    background-color: #222;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin: auto;
+    color:#eee
 }
+
 </style>
 </head>
 
