--- a/index.html
+++ b/index.html
@@ -5,96 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Amazon Product Cards</title>
 
-<style>
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-}
-
-body{
-    font-family: Arial, sans-serif;
-}
-
-#header{
-    text-align:center;
-    margin:40px 0;
-    background-color: #222;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin: auto;
-    color:#eee
-
-}
-
-#layout{
-    display:flex;
-}
-
-/* Sidebar */
-#sidebar{
-    width:20%;
-        height: 84vh;
-    background:#222;
-    color:white;
-    padding:20px;
-}
-
-#sidebar ul{
-    list-style:none;
-}
-
-#sidebar li{
-    margin:15px 0;
-}
-
-/* Main content */
-#root{
-    width: 100%;
-    display:flex;
-    justify-content:space-around;
-    padding:20px;
-}
-
-/* Card */
-.card{
-    width:30%;
-    height:50vh;
-    border:2px solid black;
-    background:#eee;
-    text-align:center;
-    padding:10px;
-}
-.card img{
-    margin-top:10px;
-    height:200px;
-    width: 290px;
-}
-
-.media{
-    display:flex;
-    justify-content:center;
-    margin:10px 0;
-}
-
-button{
-    background:yellow;
-    border-radius:10px;
-    padding:8px 16px;
-    margin-top:10px;
-}
-
-#footer{
-    text-align:center;
-    margin:40px 0;
-    background-color: #222;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin: auto;
-    color:#eee
-}
-
-</style>
+<link href="style.css" rel="stylesheet">
 </head>
 
 <body>
