Updated HTML and added new product image

--- a/index.html
+++ b/index.html
@@ -1,60 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Amazon Product Cards</title>
 
-<link href="style.css" rel="stylesheet">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amazon Product Cards</title>
+
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
 
-<header id="header">
-    <h1>Amazon Product Cards</h1>
-</header>
+    <header id="header">
+        <h1>Amazon Product Cards</h1>
+    </header>
 
-<div id="layout">
+    <div id="layout">
 
-    <aside id="sidebar">
-        <h3>Categories</h3>
-        <ul>
-            <li>Electronics</li>
-            <li>Laptops</li>
-            <li>Speakers</li>
-            <li>Accessories</li>
-        </ul>
-    </aside>
+        <aside id="sidebar">
+            <h3>Categories</h3>
+            <ul>
+                <li>Electronics</li>
+                <li>Laptops</li>
+                <li>Speakers</li>
+                <li>Accessories</li>
+            </ul>
+        </aside>
 
-    <div id="root">
+        <div id="root">
 
-        <div class="card">
-            <img src="https://m.media-amazon.com/images/I/61IxWv3ecpL._AC_UY218_.jpg">
-            <h2 class="media">🔊 Amazon Speaker</h2>
-            <h3>₹4,499</h3>
-            <button>Add in Cart</button>
+            <div class="card">
+                <img src="sy.jpg">
+                <h2 class="media">🔊 Amazon Speaker</h2>
+                <span>⭐⭐⭐⭐ 4.1 | 8,765 Ratings</span><br><br>
+                <h3>₹4,499</h3>
+
+                <button>Add in Cart</button>
+            </div>
+
+            <div class="card">
+                <img src="ss.jpg" height="200">
+                <h2 class="media">🔊 Amazon Speaker</h2>
+                <span>⭐⭐⭐⭐ 4.2 | 12,345 Ratings</span><br><br>
+
+                <h3>₹11,999</h3>
+                <button>Add in Cart</button>
+            </div>
+
+            <div class="card">
+                <img src="lap.webp" height="200">
+                <h2 class="media">Acer Laptop</h2>
+                <span>⭐⭐⭐⭐⭐ 4.8 | 23,456 Ratings</span><br><br>
+                <h3>₹35,990</h3>
+
+                <button>Add in Cart</button>
+            </div>
+
         </div>
-
-        <div class="card">
-            <img src="ss.jpg" height="200">
-            <h2 class="media">🔊 Amazon Speaker</h2>
-            <h3>₹11,999</h3>
-            <button>Add in Cart</button>
-        </div>
-
-        <div class="card">
-            <img src="lap.webp" height="200">
-            <h2 class="media">Acer Laptop</h2>
-            <h3>₹35,990</h3>
-            <button>Add in Cart</button>
-        </div>
-
     </div>
-</div>
 
-<footer id="footer">
-    <h3>© 2024 Amazon Product Cards</h3>
-</footer>
+    <footer id="footer">
+        <h3>© 2024 Amazon Product Cards</h3>
+    </footer>
 
 </body>
+
 </html>
